--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="navlogo">
-            <div class="logo">
-                
+        <div class="nav-logo border">
+            <div class="logo"></div>
+        </div>
+
+        <div class="nav-address">
+            <p class="add-first">Deliver to</p>
+            <div class="add-icon">
+                <i class="fa-solid fa-location-dot"></i>
+                <p class="add-sec">Bangladesh</p>
             </div>
         </div>
     </div>
