--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="navbar">
         <div class="nav-logo border">
             <div class="logo"></div>
         </div>
 
-        <div class="nav-address">
+        <div class="nav-address border">
             <p class="add-first">Deliver to</p>
             <div class="add-icon">
                 <i class="fa-solid fa-location-dot"></i>
-                <p class="add-sec">Bangladesh</p>
+                <p class="add-second">Bangladesh</p>
             </div>
         </div>
+
+        <div class="nav-search">
+            <select>
+                <option>All</option>
+            </select>
+            <input placeholder="Seach Amazon"> 
+            <div class="search-icon"></div>
+        </div>
+
     </div>
 </body>
+
 </html>
