--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                 <option>All</option>
             </select>
             <input placeholder="Seach Amazon"> 
-            <div class="search-icon"></div>
+            <div class="search-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
         </div>
 
     </div>
