--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </div>
 
         <div class="nav-search">
-            <select>
+            <select class="search-select">
                 <option>All</option>
             </select>
-            <input placeholder="Seach Amazon"> 
+            <input placeholder="Seach Amazon" class="search-input"> 
             <div class="search-icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
