--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
             </div>
         </div>
 
+
+     <div class="nav-signin border">
+        <p><span> Hello, sign in</span></p>
+        <p class="nav-second"> Account & Lists</p>
+     </div>
+
+     <div class="nav-return border">
+        <p><span> Returns</span></p>
+        <p class="nav-second">& Orders</p>
+     </div>
+
+
+
+
+
+
+
+
     </div>
 </body>
 
