--- a/index.html
+++ b/index.html
@@ -29,26 +29,28 @@
             <select class="search-select">
                 <option>All</option>
             </select>
-            <input placeholder="Seach Amazon" class="search-input"> 
+            <input placeholder="Seach Amazon" class="search-input">
             <div class="search-icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
         </div>
 
 
-     <div class="nav-signin border">
-        <p><span> Hello, sign in</span></p>
-        <p class="nav-second"> Account & Lists</p>
-     </div>
+        <div class="nav-signin border">
+            <p><span> Hello, sign in</span></p>
+            <p class="nav-second"> Account & Lists</p>
+        </div>
 
-     <div class="nav-return border">
-        <p><span> Returns</span></p>
-        <p class="nav-second">& Orders</p>
-     </div>
+        <div class="nav-return border">
+            <p><span> Returns</span></p>
+            <p class="nav-second">& Orders</p>
+        </div>
 
+        <div class="nav-cart border"></div>
+        <i class="fa-solid fa-cart-shopping"></i> 
+        Cart
 
-
-
+   
 
 
 
