--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
             <p class="nav-second">& Orders</p>
         </div>
 
-        <div class="nav-cart border"></div>
-        <i class="fa-solid fa-cart-shopping"></i> 
-        Cart
+        <div class="nav-cart border">
+            <i class="fa-solid fa-cart-shopping"></i>
+            Cart
+        </div>
 
-   
+
 
 
 
