--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-</head>
+
 
 <body>
     <div class="navbar">
@@ -51,12 +51,28 @@
             Cart
         </div>
 
+    </div> 
 
-
-
-
-
+    <div class="panel">
+        <div class="panel-all">
+            <i class="fa-solid fa-bars"></i>
+            All
+        </div>
+        <div class="panel-ops">
+            <p>Today's Deals</p>
+            <p>Registry </p>
+            <p>Customer Service </p>
+            <p>Gift Cards </p>
+            <p>Sell </p>
+        
+        </div>
+        <div class="panel-deals">
+            Shop Deals in Electronics
+        </div>
     </div>
+
+
+    </head>
 </body>
 
 </html>
